# sleap-rtc

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  config.example.toml  frame_client.py  frame_worker.py  pyproject.toml  signaling_server.py  sleap-rtc.toml
.claude/skills/investigation/: SKILL.md
.claude/skills/qt-testing/: SKILL.md
.claude/skills/qt-testing/scripts/: qt_capture.py
.github/workflows/: build.yml  ci.yml  codespell.yml  worker_test.yml
dashboard/: app.js  callback.html  config.js  index.html  styles.css
docs/: authentication.md  cli-migration-guide.md  structured-job-submission.md
docs/plans/: 2026-02-12-presubmission-flow-design.md  2026-03-18-signaling-heartbeat-design.md  2026-03-19-deploy-worker-modal-design.md  2026-03-19-docker-image-design.md  2026-03-19-docker-image-plan.md  2026-03-20-deploy-worker-modal-plan.md  2026-03-23-doctor-command-design.md  2026-04-01-dashboard-inference-design.md  2026-04-02-sleap-app-e2e-encryption-design.md
openspec/: project.md
openspec/changes/add-presubmission-flow/: design.md  proposal.md
openspec/changes/add-shared-fs-save-and-path-mapping/: proposal.md  tasks.md
openspec/changes/archive/2026-01-22-add-client-model-registry/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-22-add-client-room-connection/: tasks.md
openspec/specs/authentication/: spec.md
openspec/specs/checkpoint-recovery/: spec.md
openspec/specs/ci-build-optimization/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/cli-directory-browser/: spec.md
openspec/specs/cli-job-submission/: spec.md
openspec/specs/client/: spec.md
openspec/specs/client-connection/: spec.md
openspec/specs/client-file-selector/: spec.md
openspec/specs/dashboard/: spec.md
openspec/specs/file-transfer/: spec.md
openspec/specs/filesystem-browser/: spec.md
openspec/specs/gui-inference-progress/: spec.md
openspec/specs/job-specification/: spec.md
openspec/specs/model-registry/: spec.md
openspec/specs/path-resolution/: spec.md
openspec/specs/pkg-slp-upload/: spec.md
openspec/specs/signaling-configuration/: spec.md
openspec/specs/slp-video-resolution/: spec.md
openspec/specs/worker/: spec.md
openspec/specs/worker-capabilities/: spec.md
openspec/specs/worker-connection/: spec.md
openspec/specs/worker-discovery/: spec.md
openspec/specs/worker-file-transfer/: spec.md
openspec/specs/worker-io/: spec.md
openspec/specs/worker-job-execution/: spec.md
openspec/specs/worker-mounts/: spec.md
openspec/specs/worker-peer-messaging/: spec.md
openspec/specs/worker-post-training-inference/: spec.md
openspec/specs/worker-progress-reporting/: spec.md
openspec/specs/worker-state-management/: spec.md
scratch/: signaling-server-recovery.md
scripts/: test_cli_manual.py
sleap_rtc/: api.py  cli.py  config.py  protocol.py  rtc_browse.py  rtc_client.py  rtc_client_track.py  rtc_resolve.py  rtc_worker.py
sleap_rtc/auth/: __init__.py  credentials.py  github.py  keypair.py  psk.py  secret_resolver.py  totp.py
sleap_rtc/client/: client.py  client_class.py  client_track_class.py  directory_browser.py  file_selector.py  file_transfer.py  fs_viewer_server.py
sleap_rtc/client/static/: fs_resolve.html  fs_viewer.html
sleap_rtc/encryption/: __init__.py  ecdh.py  envelope.py
sleap_rtc/gui/: __init__.py  presubmission.py  runners.py  widgets.py
sleap_rtc/jobs/: __init__.py  builder.py  spec.py  validator.py
sleap_rtc/tui/: __init__.py  app.py  bridge.py
sleap_rtc/tui/screens/: __init__.py  browser.py  login.py  otp_input.py  resolve_confirm.py  room_select.py  secret_input.py  token_input.py
sleap_rtc/tui/widgets/: __init__.py  miller.py  slp_panel.py  tree_browser.py  worker_tabs.py
sleap_rtc/worker/: Dockerfile.test  admin_controller.py  capabilities.py  crdt_state.py  file_manager.py  job_coordinator.py  job_executor.py  mesh_coordinator.py  progress_reporter.py  state_manager.py  worker.py  worker_class.py
tests/: test_api.py  test_auth_github.py  test_cli.py  test_cli_config.py  test_command_builder.py  test_config_mounts.py  test_config_path_mappings.py  test_directory_browser.py  test_doctor.py  test_file_manager_fs.py  test_file_manager_upload.py  test_file_transfer_upload.py  test_gui_integration.py  test_gui_presubmission.py  test_gui_runners.py  test_inference_dialog.py  test_job_executor.py  test_job_spec.py  test_job_validator.py  test_p2p_auth.py  test_persistent_progress_reporter.py  test_slp_path_dialog_autofill.py  test_slp_path_dialog_save_buttons.py  test_smoke.py  test_stop_early_sigint.py  test_video_path_mapping_prompt.py  test_worker_config_content.py  test_worker_fs_routing.py  test_worker_reconnection.py
tests/auth/: test_credentials.py  test_keypair.py  test_psk.py  test_secret_resolver.py
tests/encryption/: test_ecdh.py  test_envelope.py
(+149 files in other folders)
