[project]
name = "sleap-rtc"
version = "0.0.2"
description = "Real-time communication layer for remote SLEAP training and inference"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiortc",
    "loguru",
    "websockets",
    "requests",
    "pyzmq",
    "jsonpickle",
    "boto3",
    "opencv-python-headless>=4.12.0.88",
    "prompt_toolkit>=3.0.0",
    "aiohttp>=3.9.0",
    "pycrdt>=0.8.0",
    "pyotp>=2.9.0",
    "pyjwt>=2.8.0",
    "textual>=0.50.0",
    "rich-click>=1.7.0",
    "tomli-w>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
sleap-rtc = "sleap_rtc.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "black",
    "ruff",
    "pyyaml",
    "qtpy",
    "PyQt5; sys_platform != 'win32'",
    "PyQt6; sys_platform == 'win32'",
    "sleap-io",
]

[tool.uv]
package = true

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]
# Ignore "missing docstring" rules — enforce incrementally as coverage improves.
# Also ignore style issues in existing docstrings that predate CI.
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D205",  # 1 blank line required between summary line and description
    "D301",  # Use r""" if any backslashes in a docstring
    "D415",  # First line should end with a period, question mark, or exclamation point
    "D417",  # Missing argument descriptions in the docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "**/.devcontainer",
    "**/Dockerfile",
    "**/.dockerignore",
    "sleap_rtc/worker/pyproject.toml",
    "sleap_rtc/client/pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.css,openspec'
ignore-words-list = 'doesnt'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''